--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "fabric": "^6.6.1",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/fabric": "^5.3.10",
     "tailwindcss": "^3.4.17"
   }
 }
