--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -30,9 +30,7 @@ jobs:
           path: ~/.npm
           key: node-modules-${{ hashFiles('**/package-lock-json') }}
       - name: Display content of a file
-        run: |
-          cd client/  
-          npm install
+        run: npm install
       - name: Install Dependence
         run: npm install
       - name: Jest test
